# FortuneRendererTemplate

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
source/: main.cpp
